# lvgl

./: CMakeLists.txt  build.sh  log.txt
app1/: CMakeLists.txt  main.c
app2/: CMakeLists.txt  page_test.h  page_tst.c
app3/: CMakeLists.txt  main.c  page_tst.c  test_font.c
app3/res/: res_conf.h
app3/res/font/: font_fonf.h
